intro under coding

--- a/style.css
+++ b/style.css
@@ -3,3 +3,18 @@ body{
     padding : 0;
     font-family: font-family: 'Roboto', sans-serif;
 }
+
+.intro-section{
+    display : flex;
+    width : 100%;
+    padding-left: 25%;
+}
+
+.intro-content-div h1{
+    font-size: 50px;
+}
+
+.intro-content-div{
+    margin-top: 120px;
+    margin-right: 100px;
+}
