--- a/style.css
+++ b/style.css
@@ -94,6 +94,7 @@ h1{
     display : flex;
     width : 93%;
     margin-left: 5%;
+    margin-bottom: 5%;
 }
 
 .reccipies-section-div{
@@ -110,4 +111,25 @@ h1{
 
 .reccipies-section-div img{
     width: 100%;
+}
+
+.social-section{
+    display : flex;
+    width : 87.5%;
+    margin-left: 5%;
+    border: 5x;
+    border-style: solid;
+    border-color: white;
+    border-radius: 40px;
+    box-shadow: 0 0 20px lightgray;
+}
+
+.social-div{
+    margin-left: 3%;
+    text-align: center;
+}
+
+.social-div img{
+    width : 20%;
+    margin-bottom: 3%;
 }
