--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
-    margin 0;
-    padding : 0;
+    margin: 0;
+    padding: 0;
     font-family: font-family: 'Roboto', sans-serif;
 }
 
@@ -113,7 +113,7 @@ h1{
 
 .social-section{
     display : flex;
-    width : 87.5%;
+    width: 89.3%;
     margin-left: 5%;
     border: 5x;
     border-style: solid;
@@ -123,6 +123,7 @@ h1{
 }
 
 .social-div{
+    width: 33%;
     margin-left: 2%;
     margin-bottom: 1%;
     text-align: center;
