--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ h1{
     color: white;
     border-radius: 50px;
     font-weight: bold;
+    box-shadow: 0 0 50px lightcoral;
 }
 
 .mid-section{
@@ -104,7 +105,7 @@ h1{
     border-radius: 40px;
     margin-left: 5%;
     margin-right: 5%;
-    box-shadow: 0 0 20px lightgray;
+    box-shadow: 0 0 40px lightgray;
 }
 
 .reccipies-section-div img{
@@ -118,13 +119,12 @@ h1{
     border: 5x;
     border-style: solid;
     border-color: white;
-    border-radius: 40px;
-    box-shadow: 0 0 20px lightgray;
+    border-radius: 20px;
+    box-shadow: 0 0 25px lightgray;
 }
 
 .social-div{
     width: 33%;
-    margin-left: 2%;
     margin-bottom: 1%;
     text-align: center;
 }
