--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* Basic Content CSS Starts Here */
 body{
     margin: 0;
     padding: 0;
@@ -147,3 +148,42 @@ footer p{
     font-size:small;
     margin-bottom: 2%;
 }
+/* Basic Content CSS Ends Here */
+
+/* Bonus Content CSS Starts Here */
+.menu-bar-div{
+    width: 100%;
+    overflow: hidden;
+    background-color: bisque;
+}
+
+.menu-div a{
+    float: left;
+    color:crimson;
+    text-align: center;
+    padding: 1% 1%;
+    text-decoration: none;
+    font-size: 18px;
+    border-right: 1px solid crimson;
+}
+
+.name-div span{
+    float: right;
+    color: crimson;
+    padding-top: .5%;
+    margin-right: 1%;
+    text-decoration: none;
+    font-size: 36px;
+    font-weight: bold;
+}
+
+.menu-div a:hover{
+    background-color:crimson;
+    color: white;
+}
+
+.menu-div a.active{
+    background-color:lightcoral;
+    color: crimson;
+}
+/* Bonus Content CSS Ends Here */
