--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
 }
 
 h1{
-    font-size: 40px;
+    font-size: 350%;
 }
 
 .orange-color{
@@ -23,13 +23,15 @@ h1{
 
 .intro-content-div{
     width: 50%;
-    margin-top: 10%;
+    margin-top: 5%;
     margin-left: 20%;
     text-align: left;
 }
 
 .intro-content-div p{
+    font-size: 20px;
     margin-bottom: 10%;
+    margin-right: 25%;
 }
 
 .intro-photo-div{
