--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body{
     margin: 0;
     padding: 0;
-    font-family: font-family: 'Roboto', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 .intro-section{
